Fri Dec 20 15:34:51 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* configure.in: Guess the --enable-mandirs setting where possible if
	  it isn't specified explicitly.

Fri Dec 20 02:28:15 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing): Match database entries
	  against real filenames using the name field where available, not
	  the lowercased field.

Fri Dec 20 02:15:21 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (mandb): If force_rescan is set, delete the database
	  and recreate it from scratch.
	* src/check_mandirs.c (testmandirs): force_rescan is handled
	  elsewhere now.
	  (purge_normal, purge_whatis): Remove inline qualifier.
	  (check_multi_key): New function to check for broken multi keys
	  such as those generated by 2.4.0.
	  (purge_missing): Call check_multi_key() where necessary.

	* src/lexgrog.l (find_name): Revert change of 27 November 2002, as
	  calling ult_src() inside find_name() breaks mandb (which already
	  calls ult_src() itself). Instead:
	  (main): Do the ult_src() resolution here for each element of argv.

	* src/ult_src.c (ult_src): 'name' argument is const.
	* src/lexgrog.l (find_name): 'file' argument is const.
	* include/manconfig.h.in, src/ult_src.h: Update prototypes.

Mon Dec 16 05:28:34 GMT 2002  Colin Watson  <cjwatson@debian.org>

	From SuSE's diff:

	* lib/error.c: Add 'extern' to prototypes.
	* lib/strappend.c, lib/xstrdup.c, lib/xstrndup.c: #include
	  "manconfig.h" rather than using an explicit prototype.
	* lib/xstrdup.c (xstrdup): 'string' should be const.

	* po/cs.po: Fix a format string.

	* src/lexgrog.l: Add Japanese translation of NAME.
	* src/man.c: 'wd', 'cwd', and local_man_loop() are static.

Mon Dec 16 04:30:39 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* configure.in: 'test "$foo"' => 'test -n "$foo"' throughout. Taken
	  from SuSE's diff.

Wed Dec  4 21:02:48 GMT 2002  Colin Watson  <cjwatson@debian.org>
