@@ -1,3 +1,9 @@
+Fri Dec 20 15:38:48 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/globbing.c (main): Make the test program compile again, and
+	  add full argument parsing.
+	* src/Makefile.in (globbing): Link with util.o.
+
 Fri Dec 20 15:34:51 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* configure.in: Guess the --enable-mandirs setting where possible if
